--- a/Classification/Decision_Tree.ipynb
+++ b/Classification/Decision_Tree.ipynb
@@ -68,7 +68,7 @@
     "import pandas as pd\n",
     "\n",
     "# Importing the dataset\n",
-    "dataset = pd.read_csv('/Users/joachimluttinen/Dropbox/Business and Data Analyst/Machine_learning/Machine Learning A-Z Template Folder/Part 3 - Classification/Section 17 - Kernel SVM/Social_Network_Ads.csv')\n",
+    "dataset = pd.read_csv('Social_Network_Ads.csv')\n",
     "X = dataset.iloc[:, [2, 3]].values\n",
     "y = dataset.iloc[:, 4].values\n",
     "\n",
